// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectFiles > saves 1`] = `
"{
  \\"nodes\\": { \\"frame1\\": { \\"type\\": \\"frame\\", \\"index\\": 0 } },
  \\"styles\\": {},
  \\"images\\": {},
  \\"colors\\": {}
}
"
`;

exports[`ProjectFiles > saves 2`] = `
"{
  \\"nodes\\": { \\"text1\\": { \\"type\\": \\"text\\", \\"index\\": 0 } },
  \\"styles\\": {},
  \\"images\\": {},
  \\"colors\\": {}
}
"
`;
